Fix for copyright spacing

--- a/source/scss/components/_footer.scss
+++ b/source/scss/components/_footer.scss
@@ -54,7 +54,6 @@
 
     &__copyright {
         float: right;
-        margin-top: -0.8rem;
         font-family: 'Whitney A', 'Whitney B';
         font-size: .6rem;
         font-style: italic;
